<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_based_nav</name>
  <version>0.0.0</version>
  <description>A modular ROS 2–based autonomous robot that performs 2D SLAM mapping, real-time object detection using YOLO, and intelligent navigation to detected targets. Designed with a scalable architecture, it supports future module integration such as delivery or manipulation systems.</description>
  <maintainer email="shouryadeep05@outlook.com">shouryadeep</maintainer>
  <license>Apache2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
 <exec_depend>rclpy</exec_depend>  
<exec_depend>sensor_msgs</exec_depend>  
<exec_depend>geometry_msgs</exec_depend> 
<exec_depend>nav_msgs</exec_depend> 
<exec_depend>std_msgs</exec_depend> 
<exec_depend>nav2_bringup</exec_depend> 
<exec_depend>slam_toolbox</exec_depend> 
<exec_depend>nav2_simple_commander</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
